# python-cliclient

./: README.md  requirements.txt  setup.cfg
mycli/: echo.py  version.py
mycli/octavia/: lb.py
mycli/osc/: plugin.py
