[metadata]
name = python-cliclient
summary = python-cliclient
description-file = README.md
license = Apache License, Version 2.0
author = Lingxian Kong
author-email = anlin.kong@gmail.com
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    mycli

[entry_points]
openstack.cli.extension =
    runit = mycli.osc.plugin

openstack.runit.v1 =
    runit_echo = mycli.echo:Echo

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
